deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-rest-api
  labels:
    name: go-rest-api
