deploy/k8s/21-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-rest-api
  namespace: go-rest-api
  labels:
    app: go-rest-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: go-rest-api
